--- a/src/main/resources/myapp.properties
+++ b/src/main/resources/myapp.properties
@@ -1,6 +1,6 @@
 
-spring.social.twitter.appId=...add your Client Id here...
-spring.social.twitter.appSecret=...add your Client Secret here...
+spring.social.twitter.appId=S1LtsFseRjy4VF2GEdcZRVAKr
+spring.social.twitter.appSecret=5wKzb3JRq0iR33NjxTE2PnjDKacRWhV3WveKJXko19zG8O1pcu
 
 spring.social.linkedin.appId=77spmsfyw0pvy1
 spring.social.linkedin.appSecret=Sf0z4IXdJLFDXjrN
