feat: add user social profile icon to users list

--- a/src/main/resources/myapp.properties
+++ b/src/main/resources/myapp.properties
@@ -1,12 +1,11 @@
+spring.social.twitter.appId=
+spring.social.twitter.appSecret=
 
-spring.social.twitter.appId=S1LtsFseRjy4VF2GEdcZRVAKr
-spring.social.twitter.appSecret=5wKzb3JRq0iR33NjxTE2PnjDKacRWhV3WveKJXko19zG8O1pcu
+spring.social.linkedin.appId=
+spring.social.linkedin.appSecret=
 
-spring.social.linkedin.appId=77spmsfyw0pvy1
-spring.social.linkedin.appSecret=Sf0z4IXdJLFDXjrN
+spring.social.google.appId=
+spring.social.google.appSecret=
 
-spring.social.google.appId=552012847045-ugqrvfg4u55qtsn9195lgv6ssa0lpouq.apps.googleusercontent.com
-spring.social.google.appSecret=Hiz-VO7lMcrbfqwYpCode04w
-
-spring.social.github.appId=3fe2a253b94b81e7db17
-spring.social.github.appSecret=3d806ab683664fd02a5cc3124671a3b8f4ee01d1
+spring.social.github.appId=
+spring.social.github.appSecret=
